# backend/modules/v1/controllers/BossController.php
@@ -4,4 +4,172 @@ namespace backend\modules\v1\controllers;
 
 class BossController extends \common\base\BaseController
 {
+	public $modelClass=  'common\models\Boss';
+
+	/**
+     * @SWG\Get(path="/v1/bosses",
+     *   tags={"世界boss管理"},
+     *   summary="返回世界boss列表",
+     *   description="返回世界boss列表",
+     *   operationId="getInventory",
+     *   produces={"application/json"},
+     *  @SWG\Parameter(
+     *         description="第几页",
+     *         in="path",
+     *         name="page",
+     *         required=true,
+     *         type="integer",
+     *         required=false,
+     *     ),
+     *    @SWG\Parameter(
+     *         description="每页的数量",
+     *         in="query",
+     *         name="per-page",
+     *         required=true,
+     *         type="integer",
+     *         required=false,
+     *     ),
+     *  @SWG\Parameter(
+     *         description="身份令牌",
+     *         in="query",
+     *         name="access-token",
+     *         required=true,
+     *         type="string",
+     *     ),
+     *   @SWG\Response(response=200, @SWG\Schema( type="array", @SWG\Items(ref="#/definitions/bossList")), description="获取成功"),
+     *   @SWG\Response(response=401,description="身份认证失败"),
+     *   security={
+     *     {"Authorization": {}},
+     *   }
+     * )
+     */
+    /**
+     * @SWG\Delete(path="/v1/bosses/{id}",
+     *   tags={"世界boss管理"},
+     *   summary="删除世界boss",
+     *   description="删除世界boss",
+     *   operationId="getInventory",
+     *   produces={"application/json"},
+     *  @SWG\Parameter(
+     *         description="世界boss id",
+     *         in="path",
+     *         name="id",
+     *         required=true,
+     *         type="integer"
+     *     ),
+     *  @SWG\Parameter(
+     *         description="身份令牌",
+     *         in="query",
+     *         name="access-token",
+     *         required=true,
+     *         type="string",
+     *     ),
+     *   @SWG\Response(response=204,description="删除成功"),
+     *   @SWG\Response(response=404,description="世界boss不存在"),
+     *   @SWG\Response(response=401,description="身份认证失败"),
+     *   security={
+     *     {"Authorization": {}},
+     *   }
+     * )
+     */
+    
+    /**
+     * @SWG\Post(path="/v1/bosses",
+     *   tags={"世界boss管理"},
+     *   summary="添加世界boss",
+     *   description="添加世界boss",
+     *   operationId="getInventory",
+     *   produces={"application/json"},
+     *   @SWG\Parameter(
+     *     in="body",
+     *     name="body",
+     *     description="世界boss和选项json串",
+     *     required=true,
+     *     @SWG\Schema(
+     *       ref="#/definitions/boss"
+     *     )
+     *   ),
+     *    @SWG\Parameter(
+     *         description="身份令牌",
+     *         in="query",
+     *         name="access-token",
+     *         required=true,
+     *         type="string",
+     *     ),
+     *   @SWG\Response(response=201, @SWG\Schema(ref="#/definitions/boss"), description="添加成功"),
+     *   @SWG\Response(response=422, description="数据验证失败"),
+     *   security={
+     *     {"Authorization": {}},
+     *   }
+     * )
+     */
+    
+    /**
+     * @SWG\Put(path="/v1/bosses/{id}",
+     *   tags={"世界boss管理"},
+     *   summary="更新世界boss",
+     *   description="更新世界boss",
+     *   operationId="getInventory",
+     *   produces={"application/json"},
+     *   @SWG\Parameter(
+     *     in="path",
+     *     name="id",
+     *     description="世界boss id",
+     *     required=true,
+     *     type="integer"
+     *   ),
+     *   @SWG\Parameter(
+     *     in="body",
+     *     name="body",
+     *     description="待更新世界boss和选项json串",
+     *     required=true,
+     *     @SWG\Schema(
+     *       ref="#/definitions/boss"
+     *     )
+     *   ),
+     *   @SWG\Parameter(
+     *         description="身份令牌",
+     *         in="query",
+     *         name="access-token",
+     *         required=true,
+     *         type="string",
+     *     ),
+     *   @SWG\Response(response=200, @SWG\Schema(ref="#/definitions/boss"), description="更新成功"),
+     *   @SWG\Response(response=422, description="数据验证失败"),
+     *   @SWG\Response(response=404,description="世界boss不存在"),
+     *   security={
+     *     {"Authorization": {}},
+     *   }
+     * )
+     */
+    
+    /**
+     * @SWG\Get(path="/v1/bosses/{id}",
+     *   tags={"世界boss管理"},
+     *   summary="查看世界boss",
+     *   description="查看世界boss",
+     *   operationId="getInventory",
+     *   produces={"application/json"},
+     *   @SWG\Parameter(
+     *     in="path",
+     *     name="id",
+     *     description="世界bossid",
+     *     required=true,
+     *     type="integer"
+     *   ),
+     *   @SWG\Parameter(
+     *         description="身份令牌",
+     *         in="query",
+     *         name="access-token",
+     *         required=true,
+     *         type="string",
+     *     ),
+     *   @SWG\Response(response=200, @SWG\Schema(ref="#/definitions/boss"), description="更新成功"),
+     *   @SWG\Response(response=404,description="世界boss不存在"),
+     *   @SWG\Response(response=401,description="身份验证失败"),
+     *   security={
+     *     {"Authorization": {}},
+     *   }
+     * )
+     */
 }
